--- a/PanelsAva/Views/DockablePanel.axaml
+++ b/PanelsAva/Views/DockablePanel.axaml
@@ -1,7 +1,8 @@
 <UserControl xmlns="https://github.com/avaloniaui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:views="clr-namespace:PanelsAva.Views"
-			 x:Class="PanelsAva.Views.DockablePanel">
+			 x:Class="PanelsAva.Views.DockablePanel"
+			 MinHeight="50">
 	<Border Background="#2A2A2A" BorderBrush="#3A3A3A" BorderThickness="1">
 		<Grid RowDefinitions="28,*">
 			<Border x:Name="TitleBar" Background="#3A3A3A" Grid.Row="0" HorizontalAlignment="Stretch">
