--- a/PanelsAva/Views/DockablePanel.axaml
+++ b/PanelsAva/Views/DockablePanel.axaml
@@ -4,14 +4,15 @@
 			 x:Class="PanelsAva.Views.DockablePanel"
 			 MinHeight="50" Design.Width="200" Design.Height="150">
 	<Border Background="#2A2A2A" BorderBrush="#3A3A3A" BorderThickness="1">
-		<Grid RowDefinitions="28,*">
-			<Border x:Name="TitleBar" Background="#3A3A3A" Grid.Row="0" HorizontalAlignment="Stretch">
+		<Grid RowDefinitions="18,*">
+			<Border x:Name="TitleBar" Background="#3A3A3A" Grid.Row="0" HorizontalAlignment="Left" Padding="6,0,6,0">
 				<Grid ColumnDefinitions="*,Auto">
 					<TextBlock Text="{Binding Title, RelativeSource={RelativeSource AncestorType=views:DockablePanel}}"
+							FontSize="12"
 							VerticalAlignment="Center"
-							HorizontalAlignment="Center"
+							HorizontalAlignment="Left"
 							Foreground="#FFFFFF" />
-					<Button x:Name="CloseButton" Content="✖" FontSize="14" Padding="0" Width="20" Height="20" Margin="0,0,5,0" Grid.Column="1"
+					<Button x:Name="CloseButton" Content="✖" FontSize="10" Width="20" Height="20" Margin="4,0,-8,0" Padding="0,3,0,0" Grid.Column="1"
 							IsVisible="{Binding IsFloating}"
 							Background="Transparent" Foreground="#FFFFFF" BorderThickness="0">
 						<Button.Styles>
