--- a/PanelsAva/Views/DockablePanel.axaml
+++ b/PanelsAva/Views/DockablePanel.axaml
@@ -5,6 +5,7 @@
 			 MinHeight="50" Design.Width="200" Design.Height="150">
 	<Border Background="#2A2A2A" BorderBrush="#3A3A3A" BorderThickness="1">
 		<Grid RowDefinitions="18,*">
+			<StackPanel x:Name="TabStrip" Orientation="Horizontal" Grid.Row="0" Background="#2A2A2A" />
 			<Border x:Name="TitleBar" Background="#3A3A3A" Grid.Row="0" HorizontalAlignment="Left" Padding="6,0,6,0">
 				<Grid ColumnDefinitions="*,Auto">
 					<TextBlock Text="{Binding Title, RelativeSource={RelativeSource AncestorType=views:DockablePanel}}"
