--- a/PanelsAva/Views/MainWindow.axaml
+++ b/PanelsAva/Views/MainWindow.axaml
@@ -10,12 +10,14 @@
 	<DockPanel>
 		<Menu DockPanel.Dock="Top">
 			<MenuItem Header="Window">
-				<MenuItem x:Name="LayersMenuItem" Header="Layers" IsChecked="True" Click="OnToggleLayers" />
-				<MenuItem x:Name="PropertiesMenuItem" Header="Properties" IsChecked="True" Click="OnToggleProperties" />
-				<MenuItem x:Name="ColorMenuItem" Header="Color" IsChecked="True" Click="OnToggleColor" />
-				<MenuItem x:Name="BrushesMenuItem" Header="Brushes" IsChecked="True" Click="OnToggleBrushes" />
-				<MenuItem x:Name="HistoryMenuItem" Header="History" IsChecked="True" Click="OnToggleHistory" />
-				<MenuItem x:Name="TimelineMenuItem" Header="Timeline" IsChecked="True" Click="OnToggleTimeline" />
+				<MenuItem x:Name="LayersMenuItem" Header="Layers" Click="OnToggleLayers" />
+				<MenuItem x:Name="PropertiesMenuItem" Header="Properties" Click="OnToggleProperties" />
+				<MenuItem x:Name="ColorMenuItem" Header="Color" Click="OnToggleColor" />
+				<MenuItem x:Name="BrushesMenuItem" Header="Brushes" Click="OnToggleBrushes" />
+				<MenuItem x:Name="HistoryMenuItem" Header="History" Click="OnToggleHistory" />
+				<MenuItem x:Name="TimelineMenuItem" Header="Timeline" Click="OnToggleTimeline" />
+				<Separator />
+				<MenuItem x:Name="LockWorkspaceMenuItem" Header="Lock Workspace" Click="OnToggleLockWorkspace" />
 			</MenuItem>
 		</Menu>
 		<Grid>
