--- a/PanelsAva/Views/MainView.axaml
+++ b/PanelsAva/Views/MainView.axaml
@@ -13,20 +13,24 @@
 
 	<Grid x:Name="MainGrid">
 		<Grid.RowDefinitions>
+			<RowDefinition Height="0" />
 			<RowDefinition Height="2*" />
 			<RowDefinition Height="4" />
 			<RowDefinition Height="150" MinHeight="100" MaxHeight="500" />
+			<RowDefinition Height="0" />
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="0" />
 			<ColumnDefinition Width="260" MinWidth="100" MaxWidth="500" />
 			<ColumnDefinition Width="4" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="4" />
 			<ColumnDefinition Width="260" MinWidth="100" MaxWidth="500" />
+			<ColumnDefinition Width="0" />
 		</Grid.ColumnDefinitions>
-		<views:DockHost x:Name="LeftDockHost" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-		<GridSplitter x:Name="LeftDockSplitter" Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Background="#646464" ResizeDirection="Columns" Width="4" />
-		<Grid Grid.Row="0" Grid.Column="2">
+		<views:DockHost x:Name="LeftDockHost" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+		<GridSplitter x:Name="LeftDockSplitter" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" Background="#646464" ResizeDirection="Columns" Width="4" />
+		<Grid Grid.Row="1" Grid.Column="3">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
@@ -36,9 +40,10 @@
 				<Image x:Name="CanvasImage" Stretch="Uniform" />
 			</Border>
 		</Grid>
-		<GridSplitter x:Name="RightDockSplitter" Grid.Row="0" Grid.Column="3" Grid.RowSpan="3" Background="#646464" ResizeDirection="Columns" Width="4" />
-		<views:DockHost x:Name="RightDockHost" Grid.Row="0" Grid.Column="4" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-		<GridSplitter x:Name="BottomDockSplitter" Grid.Row="1" Grid.Column="2" Background="#646464" ResizeDirection="Rows" Height="4" />
-		<views:DockHost x:Name="BottomDockHost" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsHorizontal="True" />
+		<GridSplitter x:Name="RightDockSplitter" Grid.Row="1" Grid.Column="4" Grid.RowSpan="3" Background="#646464" ResizeDirection="Columns" Width="4" />
+		<views:DockHost x:Name="RightDockHost" Grid.Row="1" Grid.Column="5" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+		<GridSplitter x:Name="BottomDockSplitter" Grid.Row="2" Grid.Column="3" Background="#646464" ResizeDirection="Rows" Height="4" />
+		<views:DockHost x:Name="BottomDockHost" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsHorizontal="True" />
+		<views:Toolbar x:Name="ToolbarControl" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="5" />
 	</Grid>
 </UserControl>
