Renamed DockHost to more sensible DockGrid

--- a/PanelsAva/Views/DockGrid.axaml
+++ b/PanelsAva/Views/DockGrid.axaml
@@ -1,7 +1,7 @@
 <UserControl xmlns="https://github.com/avaloniaui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:views="clr-namespace:PanelsAva.Views"
-			 x:Class="PanelsAva.Views.DockHost"
+			 x:Class="PanelsAva.Views.DockGrid"
 			 Background="#202020">
 	<Grid x:Name="PanelsGrid" />
 </UserControl>
