--- a/PanelsAva/Views/PanelTabGroup.axaml
+++ b/PanelsAva/Views/PanelTabGroup.axaml
@@ -5,26 +5,7 @@
 			 MinHeight="50" Design.Width="200" Design.Height="150">
 	<Border Background="#2A2A2A" BorderBrush="#3A3A3A" BorderThickness="1">
 		<Grid RowDefinitions="18,*">
-			<StackPanel x:Name="TabStrip" Orientation="Horizontal" Grid.Row="0" Background="#2A2A2A" />
-			<Border x:Name="TitleBar" Background="#3A3A3A" Grid.Row="0" HorizontalAlignment="Left" Padding="6,0,6,0">
-				<Grid ColumnDefinitions="*,Auto">
-					<TextBlock Text="{Binding Title, RelativeSource={RelativeSource AncestorType=views:PanelTabGroup}}"
-							FontSize="12"
-							VerticalAlignment="Center"
-							HorizontalAlignment="Left"
-							Foreground="#FFFFFF" />
-					<Button x:Name="CloseButton" Content="✖" FontSize="10" Width="20" Height="20" Margin="4,0,-8,0" Padding="0,3,0,0" Grid.Column="1"
-							Background="Transparent" Foreground="#FFFFFF" BorderThickness="0">
-						<Button.Styles>
-							<Style Selector="Button:pointerover">
-								<Setter Property="Background" Value="#444444" />
-								<Setter Property="BorderThickness" Value="1" />
-								<Setter Property="BorderBrush" Value="#666666" />
-							</Style>
-						</Button.Styles>
-					</Button>
-				</Grid>
-			</Border>
+			<StackPanel x:Name="TabStrip" Grid.Row="0" Orientation="Horizontal" Background="#2A2A2A" ZIndex="1" />
 			<Border Grid.Row="1" Background="#222222">
 				<ContentPresenter Content="{Binding Content, RelativeSource={RelativeSource AncestorType=views:PanelTabGroup}}" />
 			</Border>
